fix horizontal scroll

--- a/src/stages/_stages__media.scss
+++ b/src/stages/_stages__media.scss
@@ -2,6 +2,7 @@
   .stages-wrapper{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   .stages__block{
     width: 49%;
